--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A place where developers can publish their blog posts and comment on other developers’ posts as well",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
