individual project styling

--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "express-session": "^1.17.3",
     "mysql2": "^3.2.4",
     "nodemailer": "^6.9.1",
-    "sequelize": "^6.31.1"
+    "sequelize": "^6.31.1",
+    "tailwind": "^4.0.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
